# reference_package

./: .buildinfo  .gitignore  .gitmodules  CLI.html  MANIFEST.in  Makefile  README.md  basedpyright.toml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  reference_package.api.html  reference_package.cli.html  reference_package.html  reference_package.lib.html  search.html  searchindex.js  setup.cfg
.doctrees/: CLI.doctree  environment.pickle  index.doctree  modules.doctree  reference_package.api.doctree  reference_package.cli.doctree  reference_package.doctree  reference_package.lib.doctree
.github/workflows/: CI_CD.yml  PR_CI_CD.yml  block_outside_PRs_dipatch.yml  block_outside_PRs_dispatch.yml  block_wf_mods_dispatch.yml  block_workflow_mods_dispatch.yml  deploy_docs_dispatch.yml  test_install_dispatch.yml
_sources/: index.rst.txt  reference_package.api.rst.txt  reference_package.cli.rst.txt  reference_package.lib.rst.txt  reference_package.rst.txt
_static/: documentation_options.js
docs/: TYPECHECKER_COMPARISON.md
src/reference_package/api/: internal.py  public.py
src/reference_package/cli/: example.py
src/reference_package/lib/: constants.py  example.py
tests/: conftest.py
