[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
# Remove once we've added stubs for comb_utils.
ignore_missing_imports = true

[tool.ty]
[tool.ty.rules]
# Remove once we've added stubs for comb_utils.
unresolved-import = "ignore"

[tool.pytest.ini_options]
markers = [
    "unit",
    "integration",
    "e2e",
]