[metadata]
name = reference_package
version = 0.7.2
description = A basic package setup with examples.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaleb Coberly
maintainer_email = kaleb.coberly@gmail.com
copyright = 2024, Kaleb Coberly

[options]
python_requires = >=3.12
package_dir=
    =src
packages=find:
install_requires =
    click
    comb_utils
    typeguard

    # Scientific Python SPEC-0000 support window: https://scientific-python.org/specs/spec-0000/#support-window
    ipython>=8.22.0,<9.8.0
    matplotlib>=3.9.0,<3.11.0
    networkx>=3.3.0,<3.7.0
    numpy>=2.0.0,<2.4.0
    pandas>=2.3.0,<2.4.0
    scikit-image>=0.23.0,<0.26.0
    scikit-learn>=1.5.0,<1.8.0
    scipy>=1.13.0,<1.17.0
    xarray>=2024.3.0,<2025.12.0
    zarr>=2.18.0,<3.2.0

[options.extras_require]
dev =
    reference_package[build]
    reference_package[doc]
    reference_package[qc]
    reference_package[test]
    
build =
    build
    twine
    wheel

doc =
    furo
    sphinx
    sphinx-autodoc-typehints
    sphinx-click

qc =
    bandit
    black
    flake8
    flake8-annotations
    flake8-bandit
    flake8-black
    flake8-bugbear
    flake8-docstrings
    flake8-isort
    isort
    mypy
    pip-audit
    reference_package[test]
    safety

test =
    coverage[toml]
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    example = reference_package.cli.example:main

[options.packages.find]
where=src

[options.package_data]
reference_package = py.typed